# mcp-tool-catalog-integrity

./: .gitignore  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  NOTICE.md  PACKAGE_MANIFEST.json  README.md  SECURITY.md  THIRD_PARTY.md  deny.toml
bazel/: defs.bzl
crates/mcp-tool-catalog-integrity/: BUILD.bazel  Cargo.toml
crates/mcp-tool-catalog-integrity-interposer/: BUILD.bazel  Cargo.toml
crates/mcp-tool-catalog-integrity-interposer/examples/: stdio_interposer.rs
crates/mcp-tool-catalog-integrity-interposer/src/: file_pin_store.rs  lib.rs
crates/mcp-tool-catalog-integrity-proxy/: BUILD.bazel  Cargo.toml
crates/mcp-tool-catalog-integrity-proxy/src/: lib.rs
crates/mcp-tool-catalog-integrity/src/: canonical.rs  descriptor_hash.rs  lib.rs  manifest.rs  pin_store.rs  verifier.rs
docs/: security-boundary.md
docs/adr/: README.md  adr-mtci-001-scope-and-boundary.md  adr-mtci-002-signed-catalog-attestation.md
docs/spec/: tool-catalog-integrity-profile.md
examples/: README.md
tests/: README.md
