[package]
name = "mcp-tool-catalog-integrity-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP Tool Catalog Integrity interposer: observe tools/list results on an MCP transport and surface catalog drift."

[dependencies]
mcp-tool-catalog-integrity = { path = "../mcp-tool-catalog-integrity" }
serde_json = { workspace = true }
thiserror = { workspace = true }
