[package]
name = "mcp-tool-catalog-integrity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP Tool Catalog Integrity — pure descriptor canonicalization, hashing, pinning, and drift verification."

# The core crate stays free of networking, async runtimes, and filesystem access.
# Only the pure crypto/serialization subset is permitted here.
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
proptest = { workspace = true }
